# cli-framework

./: .gitignore  .repomixignore  AGENTS.md  CHANGELOG.md  CONTEXT.md  CONTRIBUTING.md  Cargo.toml  EXAMPLES.md  README.md  architecture.md  repomix-output.xml  resolution
.cargo/: audit.toml
.cursor/rules/: rust.mdc  specify-rules.mdc
.github/workflows/: ci.yml
.specify/memory/: constitution.md
cli-framework-macros/: Cargo.toml
cli-framework-macros/src/: lib.rs
crates/tower_compat/: Cargo.toml
docs/: getting-started.md  migration-typed-spec.md  testing.md
docs/adr/: 0001-two-llm-stacks.md  0002-plugins-metadata-only.md  0060-auth-and-data-source-removal.md  0061-typed-handlers-argvalue-backbone.md  0062-global-flags-as-context.md  0063-declarative-arg-constraints-validate-then-project.md  0064-derive-commandspec-full-coverage-hybrid-attributes.md  0065-strict-by-default-remove-leniency-features.md  0066-mcp-apps-extension.md
docs/plans/: agent-chat-rollout.md
docs/reports/: architecture_enhancements.md  bugs.md
examples/basic_cli/: Cargo.toml  README.md
examples/http_retry_demo/: main.rs
examples/kitchen_sink/: main.rs
examples/multi_view/: main.rs
examples/progress_demo/: main.rs
examples/simple/: main.rs
examples/with_ailoop/: Cargo.toml
examples/with_ask/: Cargo.toml  README.md
examples/with_commands/: main.rs
examples/with_plugins/: Cargo.toml  README.md
scripts/: run-ci-tests.sh  run-tests.sh
scripts/hooks/: pre-commit
skill/: SKILL.md  skill-project.toml
skill/references/: api-serving-and-versioning.md  architecture-and-sources.md  ask-llm-and-security.md  cli-creation-scenarios.md  command-registration-and-context.md  command-spec-and-validation.md  features-and-cargo-flags.md  http-retry.md  mcp-streamable-http.md  plugins-and-ailoop.md  testing-with-testkit.md
specs/: 003_batch_task_management.md  009_cli_mode_detection.md  cli-framework.md
specs/001-cli-framework-spec/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-async-migration/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-batch-task-management/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-progress-reporting/: ANALYSIS_REPORT.md  ANALYSIS_REPORT_V2.md  Untitled  analysis-report.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-http-retry-integration/: tasks.md
specs/007-task-result-aggregation/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/009-cli-mode-detection/: plan.md  tasks.md
src/: cli_output.rs  lib.rs  tool_args.rs  tower.rs
src/ailoop/: mod.rs
src/api/: box_clone_layer.rs  headers.rs  health.rs  mod.rs  swagger.rs  versioning.rs
src/app/: background_tasks.rs  builder.rs  clap_adapter.rs  context.rs  diagnostic_reporter.rs  dispatch.rs  meta.rs  mod.rs  module.rs  runtime.rs  version.rs
src/auth/: login.rs  mod.rs  rbac.rs  token.rs
src/cli_mode/: mod.rs
src/cli_output/: ask.rs  help.rs  json.rs  message.rs  mod.rs  progress.rs  table.rs
src/command/: ask.rs  chat.rs  mod.rs  palette.rs  parser.rs  registry.rs  typed.rs
src/command_surface/: collect.rs  command.rs  document.rs  json_schema.rs  mod.rs  render.rs  tool_bridge.rs
src/data_source/: data_source_trait.rs  log.rs  mod.rs
src/doctor/: check.rs  command.rs  mod.rs  module.rs  render.rs  runner.rs
src/emulation/: fixtures.rs  mock_executor.rs  mod.rs  test_harness.rs
src/http_retry/: client.rs  http_errors.rs  mod.rs
src/keymap/: config.rs  mod.rs  registry.rs  resolver.rs
src/llm/: anthropic.rs  mod.rs  openai.rs
src/mcp/: banner.rs  commands.rs  mod.rs  resources.rs  schema.rs  transport_http.rs  transport_stdio.rs
src/message/: mod.rs  model.rs
src/observability/: mod.rs  opentelemetry.rs
src/parser/: clap_mapper.rs  diagnostic.rs  error_codes.rs  mod.rs  outcome.rs  validator.rs
src/plugin/: manifest.rs  mod.rs  registry.rs
src/project_config/: discover.rs  loader.rs  mod.rs
src/retry/: executor.rs  executor_async.rs  mod.rs  policy.rs
src/security/: command_risk.rs  gate.rs  mod.rs  output_sanitize.rs  risk_enforcer.rs
src/spec/: arg_spec.rs  command_tree.rs  mod.rs  value.rs
src/testkit/: mod.rs
src/view/: mod.rs  registry.rs  theme.rs  view_trait.rs
src/widget/: empty_state.rs  grid.rs  help.rs  log.rs  mod.rs  modal.rs  status_bar.rs  view_header.rs
tests/: keymap.rs  stdio_capture.rs  test_app_builder_version.rs  test_async_contracts.rs  test_async_integration.rs  test_cli_mode_color.rs  test_cli_mode_dimensions.rs  test_cli_mode_format.rs  test_cli_mode_foundational.rs  test_cli_mode_interactive.rs  test_cli_output_foundational.rs  test_cli_output_integration.rs  test_cli_output_json.rs  test_cli_output_message.rs  test_cli_output_progress.rs  test_cli_output_table.rs  test_concurrent_operations.rs  test_concurrent_refresh.rs  test_http_error_classification.rs  test_http_retry_contract.rs  test_http_retry_integration.rs  test_performance.rs  test_progress_api.rs  test_progress_reporting.rs  test_streaming.rs  test_ui_responsiveness.rs
tests/app/: background_tasks.rs
tests/cli_mode/: environment_variables.rs  mod.rs  tty_detection.rs
tests/cli_output/: foundational_test.rs
tests/contract/: app_builder_api.rs  data_source_trait.rs  http_retry_api.rs  mod.rs  module_trait.rs  progress_api.rs  test_async_command.rs  test_async_data_source.rs  test_async_view.rs  view_trait.rs
tests/helpers/: test_backend.rs
tests/integration/: ailoop_websocket.rs  api_server_mcp_coexist.rs  api_server_spa.rs  api_server_versioning.rs  api_swagger.rs  app_builder.rs  batch_operations.rs  chat_loop.rs  cli_mode_integration.rs  command_palette.rs  doctor_command.rs  http_retry.rs  keymap.rs  mcp_axum_mount.rs  mcp_http.rs  mcp_install.rs  nested_command_routing.rs  progress_reporting.rs  project_config.rs  result_aggregation.rs  (+3 more)
tmp/: config-files-feature-proposal.md  doctor-feature-proposal.md
tools-cli-framework/: README.md  SKILL.md  skill-project.toml
(+78 files in other folders)
