[package]
name = "cli-framework"
version = "0.3.0"
edition = "2021"
authors = ["CLI Framework Team"]
description = "A pure CLI framework with AI-powered command resolution and plugin system"
license = "MIT OR Apache-2.0"
repository = "https://github.com/your-org/cli-framework"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
tokio-util = { version = "0.7", features = ["time"] }
reqwest = { version = "0.12", features = ["json"] }
httpdate = "1.0"
log = "0.4"
clap = { version = "4.0", features = ["derive"] }
toml = "0.8"
dirs = "5.0"
uuid = { version = "1.0", features = ["v4"] }
crossterm = "0.28"
# ailoop-core integration
ailoop-core = { git = "https://github.com/goailoop/ailoop.git", rev = "83508e764a18b9073bfc5f34a9060247634b3833" }
# LLM providers
async-openai = "0.20"
anthropic-sdk = "0.1"

# Optional dependencies for CLI output utilities
comfy-table = { version = "7.0", optional = true }
indicatif = { version = "0.17", optional = true }

# Optional OpenTelemetry dependencies (applications can enable)
# Note: Applications should add these dependencies themselves when using observability feature
# opentelemetry = { version = "0.24", optional = true }
# opentelemetry-otlp = { version = "0.17", optional = true }
# opentelemetry-sdk = { version = "0.24", optional = true }

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
wiremock = "0.6"
env_logger = "0.11"
tempfile = "3.0"
libc = "0.2"

[features]
default = []
# observability = ["opentelemetry", "opentelemetry-otlp", "opentelemetry-sdk"]
# Note: OpenTelemetry integration will be implemented in src/observability/mod.rs
# Applications should add opentelemetry crates to their own Cargo.toml when using this feature
observability = []
# CLI output utilities optional features
table-advanced = ["comfy-table"]
progress = ["indicatif"]

[lib]
name = "cli_framework"
path = "src/lib.rs"

[[example]]
name = "http_retry_demo"
path = "examples/http_retry_demo/main.rs"

[[example]]
name = "basic_cli"
path = "examples/basic_cli/src/main.rs"

[[example]]
name = "with_ask"
path = "examples/with_ask/src/main.rs"

[[example]]
name = "with_plugins"
path = "examples/with_plugins/src/main.rs"

[[example]]
name = "with_ailoop"
path = "examples/with_ailoop/src/main.rs"

[[test]]
name = "integration_app_builder"
path = "tests/integration/app_builder.rs"

[[test]]
name = "unit_command_ask_resolution"
path = "tests/unit/command/ask_resolution.rs"

