[package]
name = "cli-framework"
version = "0.4.0"
edition = "2021"
authors = ["CLI Framework Team"]
description = "A pure CLI framework with AI-powered command resolution and plugin system"
license = "Apache-2.0"
repository = "https://github.com/aroff/cli-framework"

[dependencies]
anyhow = "1.0"
regex = "1"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
tokio-util = { version = "0.7", features = ["time"], optional = true }
reqwest = { version = "0.12", features = ["json"] }
httpdate = "1.0"
log = "0.4"
clap = { version = "4.0", features = ["derive", "string"] }
toml = "0.8"
dirs = "5.0"
uuid = { version = "1.0", features = ["v4"] }
crossterm = "0.28"
# ailoop-core integration
ailoop-core = { git = "https://github.com/goailoop/ailoop.git", rev = "dd186c055dbfcbf5c32c8e58b251eaf0bf07343b", default-features = false }
# LLM providers
async-openai = "0.20"
anthropic-sdk = "0.1"

# Optional dependencies for CLI output utilities
comfy-table = { version = "7.0", optional = true }
indicatif = { version = "0.17", optional = true }

# Optional MCP server dependencies
# - transport-io: server-side stdio transport (Phase 2 rollout #50)
# - client: enabled so integration tests can exercise stdio-style transports without TCP
rmcp = { version = "1.6", features = ["server", "client", "transport-streamable-http-server", "transport-io"], optional = true }
axum = { version = "0.8", optional = true }
# Optional API server dependencies
tower = { package = "tower_compat", path = "crates/tower_compat", optional = true }
tower-http = { version = "0.6", features = ["cors"], optional = true }
chrono = { version = "0.4", default-features = false, features = ["clock", "std"], optional = true }
# Optional MCP install dependency (aikit-sdk provides add_mcp_server and mcp_supported_agents)
aikit-sdk = { git = "https://github.com/goaikit/aikit.git", package = "aikit-sdk", rev = "a22a619fa61d2fce7f7364c18199b75b72d74e4b", optional = true }
## Optional embedded agent dependency (used by `chat` feature)
aikit-agent = { git = "https://github.com/goaikit/aikit.git", package = "aikit-agent", rev = "a22a619fa61d2fce7f7364c18199b75b72d74e4b", optional = true }

# Optional OpenTelemetry dependencies (applications can enable)
# Note: Applications should add these dependencies themselves when using observability feature
# opentelemetry = { version = "0.24", optional = true }
# opentelemetry-otlp = { version = "0.17", optional = true }
# opentelemetry-sdk = { version = "0.24", optional = true }

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
wiremock = "0.6"
env_logger = "0.11"
tempfile = "3.0"
libc = "0.2"
insta = { version = "1", features = ["json"] }
axum = { version = "0.8" }
futures-util = "0.3"
tokio-tungstenite = "0.21"

[features]
default = ["clap-dispatch"]
# observability = ["opentelemetry", "opentelemetry-otlp", "opentelemetry-sdk"]
# Note: OpenTelemetry integration will be implemented in src/observability/mod.rs
# Applications should add opentelemetry crates to their own Cargo.toml when using this feature
observability = []
# CLI output utilities optional features
table-advanced = ["comfy-table"]
progress = ["indicatif"]
clap-dispatch = []  # no-op since v0.4.0; remove in v0.5.0
# Reject unknown flags on legacy (no-spec) commands
strict-args = []
# Reject registration of commands without a CommandSpec
strict-types = []
# Coerce bare "--flag" to Bool(true) on legacy path
legacy-arg-coercion = []
# Enable CliTestHarness (dev/test use only)
testkit = []
# MCP server — expose registered commands as MCP tools via Streamable HTTP
mcp-server = ["dep:rmcp", "dep:axum"]
# API server — versioned Axum hosting with health/readiness and graceful shutdown
api-server = ["dep:axum", "axum/ws", "dep:tower", "dep:tower-http", "dep:chrono", "dep:tokio-util"]
# MCP install — register this app as an MCP server in agent config files
mcp-install = ["mcp-server", "dep:aikit-sdk"]
# Doctor diagnostics framework — structured health checks with terminal/JSON output
doctor = []
# Project config — project root discovery and TOML loading (off by default)
project-config = []
chat = ["dep:aikit-agent", "dep:tokio-util"]

[lib]
name = "cli_framework"
path = "src/lib.rs"

[[bin]]
name = "cfw_mcp_stdio_test_server"
path = "tests/bin/mcp_stdio_test_server.rs"
required-features = ["mcp-server"]

[[example]]
name = "http_retry_demo"
path = "skill/examples/http_retry_demo/main.rs"

[[example]]
name = "basic_cli"
path = "skill/examples/basic_cli/src/main.rs"

[[example]]
name = "with_ask"
path = "skill/examples/with_ask/src/main.rs"

[[example]]
name = "with_api"
path = "skill/examples/with_api/src/main.rs"
required-features = ["api-server"]

[[example]]
name = "with_chat"
path = "skill/examples/with_chat/src/main.rs"
required-features = ["chat"]

[[example]]
name = "with_plugins"
path = "skill/examples/with_plugins/src/main.rs"

[[example]]
name = "with_ailoop"
path = "skill/examples/with_ailoop/src/main.rs"

[[test]]
name = "integration_app_builder"
path = "tests/integration/app_builder.rs"

[[test]]
name = "integration_ailoop_websocket"
path = "tests/integration/ailoop_websocket.rs"

[[test]]
name = "unit_command_ask_resolution"
path = "tests/unit/command/ask_resolution.rs"

[[test]]
name = "unit_command_chat_command"
path = "tests/unit/command/chat_command.rs"
required-features = ["chat"]

[[test]]
name = "unit_help_renderer"
path = "tests/unit/help_renderer.rs"

[[test]]
name = "unit_security_output_sanitize"
path = "tests/unit/security_output_sanitize.rs"

[[test]]
name = "unit_security_command_risk"
path = "tests/unit/security_command_risk.rs"

[[test]]
name = "unit_security_plugin_path"
path = "tests/unit/security_plugin_path.rs"

[[test]]
name = "unit_security_http_client"
path = "tests/unit/security_http_client.rs"

[[test]]
name = "unit_http_retry_client"
path = "tests/unit/http_retry_client.rs"

[[test]]
name = "unit_clap_adapter"
path = "tests/unit/clap_adapter.rs"

[[test]]
name = "unit_parser_diagnostics"
path = "tests/unit/parser_diagnostics.rs"

[[test]]
name = "unit_mcp_tool_export"
path = "tests/unit/mcp_tool_export.rs"
required-features = ["mcp-server"]

[[test]]
name = "unit_mcp_dispatch"
path = "tests/unit/mcp_dispatch.rs"
required-features = ["mcp-server"]

[[test]]
name = "integration_mcp_http"
path = "tests/integration/mcp_http.rs"
required-features = ["mcp-server"]

[[test]]
name = "integration_mcp_axum_mount"
path = "tests/integration/mcp_axum_mount.rs"
required-features = ["mcp-server"]

[[test]]
name = "integration_api_server_versioning"
path = "tests/integration/api_server_versioning.rs"
required-features = ["api-server"]

[[test]]
name = "integration_api_server_mcp_coexist"
path = "tests/integration/api_server_mcp_coexist.rs"
required-features = ["api-server", "mcp-server"]

[[example]]
name = "with_mcp"
path = "skill/examples/with_mcp/src/main.rs"
required-features = ["mcp-server"]

[[example]]
name = "with_doctor"
path = "skill/examples/with_doctor/src/main.rs"
required-features = ["doctor"]

[[test]]
name = "unit_doctor_runner"
path = "tests/unit/doctor_runner.rs"
required-features = ["doctor"]

[[test]]
name = "integration_doctor_command"
path = "tests/integration/doctor_command.rs"
required-features = ["doctor", "testkit"]

[[example]]
name = "with_project_config"
path = "skill/examples/with_project_config/src/main.rs"
required-features = ["project-config"]

[[test]]
name = "unit_project_config_discover"
path = "tests/unit/project_config_discover.rs"
required-features = ["project-config"]

[[test]]
name = "unit_project_config_loader"
path = "tests/unit/project_config_loader.rs"
required-features = ["project-config"]

[[test]]
name = "integration_project_config"
path = "tests/integration/project_config.rs"
required-features = ["project-config"]

[[test]]
name = "unit_command_surface_json_schema"
path = "tests/unit/command_surface_json_schema.rs"

[[test]]
name = "unit_command_surface_collect"
path = "tests/unit/command_surface_collect.rs"

[[test]]
name = "unit_command_surface_render"
path = "tests/unit/command_surface_render.rs"

[[test]]
name = "integration_spec_command"
path = "tests/integration/spec_command.rs"

[[test]]
name = "integration_nested_command_routing"
path = "tests/integration/nested_command_routing.rs"

[[test]]
name = "unit_mcp_install"
path = "tests/unit/mcp_install.rs"
required-features = ["mcp-install"]

[[test]]
name = "integration_mcp_install"
path = "tests/integration/mcp_install.rs"
required-features = ["mcp-install"]
